# purestudy

./: .gitignore  Purescript.cabal  stack.yaml
src/: Main.hs  comment.txt
src/PureScript/: TypeChecker.hs
src/PureScript/Parser/: Declarations.hs  Types.hs
src/PureScript/TypeChecker/: Monad.hs  Types.hs
