name: Purescript
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) Phil Freeman 2013
maintainer: Phil Freeman <paf31@cantab.net>
stability: experimental
synopsis: PureScript Programming Language Compiler
description: A small compile-to-JS language with extensible records and type-safe blocks
author: Phil Freeman <paf31@cantab.net>
data-dir: ""

library
    build-depends: base -any, containers -any,
                   mtl -any, parsec -any, utf8-string -any
    
    default-language:    Haskell2010                   
    exposed-modules: PureScript
    exposed: True
    buildable: True
    hs-source-dirs: src
    other-modules: PureScript.CodeGen PureScript.Kinds
                   PureScript.Parser PureScript.TypeChecker PureScript.Types
                   PureScript.Values PureScript.Parser.Common
                   PureScript.Parser.Declarations PureScript.Parser.Types
                   PureScript.Parser.Values PureScript.TypeChecker.Kinds
                   PureScript.TypeChecker.Monad PureScript.TypeChecker.Types
                   PureScript.Declarations

executable PureScript
    hs-source-dirs: src
    main-is: Main.hs    
    default-language:    Haskell2010    
    build-depends: base >= 4.7 && < 5
                  ,containers
                  ,mtl 
                  ,parsec
    -- buildable: True
    other-modules: 
                 PureScript
                 PureScript.CodeGen
                 PureScript.Declarations
                 PureScript.Kinds
                 PureScript.Parser
                 PureScript.Parser.Common
                 PureScript.Parser.Declarations
                 PureScript.Parser.Types
                 PureScript.Parser.Values
                 PureScript.TypeChecker
                 PureScript.TypeChecker.Kinds
                 PureScript.TypeChecker.Monad
                 PureScript.TypeChecker.Types
                 PureScript.Types
                 PureScript.Values

